# Yet-Another-MLP

./: .gitignore  LR_Working.py  LR_cuda.py  MLP_RUST_CAR_PLAN_BIKE.py  MLP_Rust.py  MLP_Working.py  README.md  merge_image.py  optimized_cuda.py  picture_to_dataset.py  test.py  tests_ml.ipynb  yetanothermlptest.py
src/: Cargo.toml  README.md
src/src/: lib.rs
web/: web.py
web/templates/: index.html
yetanothermlp/: Cargo.toml
yetanothermlp/src/: lib.rs  main.rs
