[package]
name = "yetanothermlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.1"
ndarray = "0.15.6"
ndarray-rand = {version = "0.14.0"}


[lib]
crate-type = ["cdylib"]
name = "yetnewmlp"
